fixed z-index for IE

--- a/css/master.css
+++ b/css/master.css
@@ -60,6 +60,8 @@ h3 {
 
 body {
   font-family: 'Roboto Condensed', sans-serif;
+  z-index: 2;
+  position: relative;
 }
 
 hr {
